fix for bug 45621 - added MarkDirty for procentage child in case of nowrap blocks, consolidated the logic in nsBlockFrame::PrepareResizeReflow sr= attinasi, r=dbaron